--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>KSM Online Restaurant</title>
   <link rel="stylesheet" href="styles.css" />
+
+  <!-- Google Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+
   <style>
     body {
       background: url('images/chick_homepage.jpg') no-repeat center center fixed;
@@ -16,56 +20,80 @@
       height: 100vh;
       margin: 0;
       font-family: Arial, sans-serif;
-      color: #fff; /* white text for dark bg */
+      color: #fff;
       text-align: center;
+      padding: 20px;
+      position: relative;
     }
 
-    /* Dark overlay to improve text contrast */
+    /* Overlay for better contrast */
     body::before {
       content: "";
       position: absolute;
       top: 0; left: 0;
       width: 100%; height: 100%;
-      background: rgba(0, 0, 0, 0.5); /* semi-transparent black overlay */
+      background: rgba(0, 0, 0, 0.6);
       z-index: -1;
     }
 
     h1 {
-      font-size: 2.8rem;
-      margin-bottom: 10px;
-      color: #FFD700; /* gold/yellow for standout */
-      text-shadow: 2px 2px 6px rgba(0,0,0,0.7);
+      font-family: 'Pacifico', cursive; /* Stylish font */
+      font-size: 2.4rem;
+      margin-bottom: 15px;
+      color: #FF3B30; /* bright red */
+      text-shadow: 2px 2px 6px rgba(0,0,0,0.8);
     }
 
     h2 {
-      margin-bottom: 30px;
-      color: #fff;
-      font-weight: 400;
-      text-shadow: 1px 1px 4px rgba(0,0,0,0.7);
+      margin-bottom: 40px;
+      font-size: 1.2rem;
+      color: #FFD700; /* yellow */
+      font-weight: 500;
+      text-shadow: 1px 1px 4px rgba(0,0,0,0.8);
     }
 
     .language-choice {
       display: flex;
-      gap: 20px;
+      gap: 15px;
       flex-wrap: wrap;
       justify-content: center;
+      width: 100%;
     }
 
     .lang-button {
-      padding: 15px 30px;
-      font-size: 1.2rem;
+      flex: 1 1 45%;
+      max-width: 160px;
+      padding: 15px 20px;
+      font-size: 1rem;
       border: none;
-      border-radius: 10px;
+      border-radius: 12px;
       cursor: pointer;
       color: #fff;
       font-weight: bold;
-      background: #E53935; /* red button */
+      background: #E53935; /* red */
       transition: background 0.3s ease, transform 0.2s ease;
       box-shadow: 0 4px 10px rgba(0,0,0,0.5);
     }
+
     .lang-button:hover {
       background: #FFB300; /* yellow on hover */
       transform: scale(1.05);
+    }
+
+    /* Mobile First */
+    @media (max-width: 480px) {
+      h1 {
+        font-size: 2rem;
+      }
+      h2 {
+        font-size: 1rem;
+        margin-bottom: 30px;
+      }
+      .lang-button {
+        flex: 1 1 100%;
+        max-width: 90%;
+        font-size: 1rem;
+      }
     }
   </style>
 </head>
