--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <title>KSM Online Restaurant</title>
   <link rel="stylesheet" href="styles.css" />
 
-  <!-- Google Font -->
-  <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Poppins:wght@500&display=swap" rel="stylesheet">
 
   <style>
     body {
@@ -19,37 +19,39 @@
       justify-content: center;
       height: 100vh;
       margin: 0;
-      font-family: Arial, sans-serif;
-      color: #fff;
       text-align: center;
-      padding: 20px;
       position: relative;
+      padding: 20px;
     }
 
-    /* Dark overlay for readability */
+    /* Overlay for readability */
     body::before {
       content: "";
       position: absolute;
       top: 0; left: 0;
       width: 100%; height: 100%;
-      background: rgba(0, 0, 0, 0.6);
+      background: rgba(0,0,0,0.6);
       z-index: -1;
     }
 
+    /* Restaurant Name */
     h1 {
-      font-family: 'Pacifico', cursive; /* Stylish brand font */
-      font-size: 3rem; /* increased size */
+      font-family: 'Pacifico', cursive;
+      font-size: 3.2rem;
       margin-bottom: 15px;
-      color: #00E5FF; /* bright cyan/aqua */
-      text-shadow: 3px 3px 8px rgba(0,0,0,0.9);
+      background: linear-gradient(45deg, #FF1744, #FFEA00);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      text-shadow: 0 0 12px rgba(255, 234, 0, 0.7), 0 0 18px rgba(255, 23, 68, 0.8);
     }
 
+    /* Welcome Message */
     h2 {
+      font-family: 'Poppins', sans-serif;
       margin-bottom: 40px;
-      font-size: 1.6rem; /* increased size */
-      color: #FFA726; /* orange */
-      font-weight: 600;
-      text-shadow: 2px 2px 6px rgba(0,0,0,0.8);
+      font-size: 1.8rem;
+      color: #00E5FF;
+      text-shadow: 0 0 10px rgba(0,229,255,0.9), 0 0 20px rgba(0,229,255,0.7);
     }
 
     .language-choice {
@@ -70,18 +72,18 @@
       cursor: pointer;
       color: #fff;
       font-weight: bold;
-      background: #E53935; /* red */
+      background: #E53935;
       transition: background 0.3s ease, transform 0.2s ease;
       box-shadow: 0 4px 10px rgba(0,0,0,0.5);
     }
 
     .lang-button:hover {
-      background: #FFEB3B; /* yellow hover */
+      background: #FFEB3B;
       color: #000;
       transform: scale(1.05);
     }
 
-    /* Mobile-friendly */
+    /* Mobile adjustments */
     @media (max-width: 480px) {
       h1 {
         font-size: 2.4rem;
