--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
       padding: 20px;
     }
 
-    /* Overlay for readability */
+    /* Overlay to darken background */
     body::before {
       content: "";
       position: absolute;
       top: 0; left: 0;
       width: 100%; height: 100%;
-      background: rgba(0,0,0,0.6);
+      background: rgba(0,0,0,0.55);
       z-index: -1;
     }
 
@@ -39,10 +39,8 @@
       font-family: 'Pacifico', cursive;
       font-size: 3.2rem;
       margin-bottom: 15px;
-      background: linear-gradient(45deg, #FF1744, #FFEA00);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      text-shadow: 0 0 12px rgba(255, 234, 0, 0.7), 0 0 18px rgba(255, 23, 68, 0.8);
+      color: #FFD700; /* gold */
+      text-shadow: 0 0 12px rgba(255, 215, 0, 0.9), 0 0 18px rgba(0, 0, 0, 0.8);
     }
 
     /* Welcome Message */
@@ -50,8 +48,8 @@
       font-family: 'Poppins', sans-serif;
       margin-bottom: 40px;
       font-size: 1.8rem;
-      color: #00E5FF;
-      text-shadow: 0 0 10px rgba(0,229,255,0.9), 0 0 20px rgba(0,229,255,0.7);
+      color: #00E676; /* green-cyan */
+      text-shadow: 0 0 10px rgba(0, 230, 118, 0.8), 0 0 18px rgba(0,0,0,0.7);
     }
 
     .language-choice {
@@ -86,7 +84,7 @@
     /* Mobile adjustments */
     @media (max-width: 480px) {
       h1 {
-        font-size: 2.4rem;
+        font-size: 2.5rem;
       }
       h2 {
         font-size: 1.3rem;
