--- a/index.html
+++ b/index.html
@@ -16,47 +16,48 @@
       justify-content: center;
       text-align: center;
       color: #fff;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     }
 
     .overlay {
       background: rgba(0, 0, 0, 0.6);
-      padding: 30px;
-      border-radius: 15px;
+      padding: 40px;
+      border-radius: 20px;
       width: 90%;
       max-width: 500px;
     }
 
     h1 {
-      font-size: 2.5rem;
-      margin-bottom: 10px;
+      font-size: 3rem;
+      margin-bottom: 15px;
       font-family: 'Georgia', serif;
-      color: #ffcc00; /* gold shade */
-      text-shadow: 2px 2px 6px rgba(0,0,0,0.7);
+      color: #ffcc00;
+      text-shadow: 3px 3px 8px rgba(0,0,0,0.8);
     }
 
     h2 {
-      font-size: 1.8rem;
-      margin-bottom: 20px;
-      font-family: 'Arial Black', sans-serif;
-      color: #ff4444; /* bright red */
-      text-shadow: 1px 1px 5px rgba(0,0,0,0.6);
+      font-size: 2rem;
+      margin-bottom: 25px;
+      font-weight: bold;
+      color: #ff4444;
+      text-shadow: 2px 2px 6px rgba(0,0,0,0.7);
     }
 
     .lang-buttons {
       display: flex;
       flex-direction: column;
-      gap: 15px;
+      gap: 20px;
     }
 
     .lang-buttons a {
       display: inline-block;
-      padding: 12px 20px;
+      padding: 14px 22px;
       background: #ffcc00;
       color: #000;
-      font-size: 1.2rem;
+      font-size: 1.3rem;
       font-weight: bold;
       text-decoration: none;
-      border-radius: 8px;
+      border-radius: 10px;
       transition: background 0.3s ease;
     }
 
@@ -65,9 +66,9 @@
     }
 
     @media (max-width: 600px) {
-      h1 { font-size: 2rem; }
-      h2 { font-size: 1.5rem; }
-      .lang-buttons a { font-size: 1rem; }
+      h1 { font-size: 2.2rem; }
+      h2 { font-size: 1.6rem; }
+      .lang-buttons a { font-size: 1.1rem; }
     }
   </style>
 </head>
