--- a/menu_select.html
+++ b/menu_select.html
@@ -16,19 +16,20 @@
       justify-content: center;
       text-align: center;
       color: #fff;
+      font-family: 'Segoe UI', sans-serif;
     }
 
     .overlay {
       background: rgba(0, 0, 0, 0.6);
-      padding: 30px;
-      border-radius: 15px;
+      padding: 40px;
+      border-radius: 20px;
       width: 90%;
       max-width: 500px;
     }
 
     h1 {
-      font-size: 2rem;
-      margin-bottom: 25px;
+      font-size: 2.3rem;
+      margin-bottom: 30px;
       color: #ffcc00;
       text-shadow: 2px 2px 6px rgba(0,0,0,0.8);
     }
@@ -36,18 +37,18 @@
     .menu-buttons {
       display: flex;
       flex-direction: column;
-      gap: 15px;
+      gap: 18px;
     }
 
     .menu-buttons a {
       display: inline-block;
-      padding: 12px 20px;
+      padding: 14px 20px;
       background: #ff4444;
       color: #fff;
-      font-size: 1.2rem;
+      font-size: 1.3rem;
       font-weight: bold;
       text-decoration: none;
-      border-radius: 8px;
+      border-radius: 10px;
       transition: background 0.3s ease;
     }
 
@@ -56,8 +57,8 @@
     }
 
     @media (max-width: 600px) {
-      h1 { font-size: 1.7rem; }
-      .menu-buttons a { font-size: 1rem; }
+      h1 { font-size: 1.9rem; }
+      .menu-buttons a { font-size: 1.1rem; }
     }
   </style>
 </head>
