--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     body {
       margin: 0;
       padding: 0;
-      background: url('chick_homepage.jpg') no-repeat center center/cover;
+      background: url('images/chick_homepage.jpg') no-repeat center center/cover;
       height: 100vh;
       display: flex;
       align-items: center;
