--- a/menu_select.html
+++ b/menu_select.html
@@ -9,7 +9,7 @@
     body {
       margin: 0;
       padding: 0;
-      background: url('veg_nonveg.jpg') no-repeat center center/cover;
+      background: url('images/veg_nonveg.jpg') no-repeat center center/cover;
       height: 100vh;
       display: flex;
       align-items: center;
