--- a/veg.html
+++ b/veg.html
@@ -16,17 +16,17 @@
     }
 
     .overlay {
-      background: rgba(0, 0, 0, 0.65); /* dark overlay for readability */
+      background: rgba(0, 0, 0, 0.6); /* dark overlay for readability */
       min-height: 100vh;
       padding: 20px;
     }
 
     h1 {
       text-align: center;
-      font-size: 2.5rem;
+      font-size: 2.8rem;
       margin: 20px 0;
-      color: #ffcc00; /* golden yellow */
-      text-shadow: 2px 2px 6px rgba(0,0,0,0.8);
+      color: #9CFF2E; /* neon green */
+      text-shadow: 2px 2px 8px rgba(0,0,0,0.9);
     }
 
     .menu-container {
@@ -35,7 +35,7 @@
     }
 
     .menu-item {
-      background: rgba(255,255,255,0.1);
+      background: rgba(255,255,255,0.08);
       border-radius: 12px;
       padding: 15px 20px;
       margin: 15px 0;
@@ -44,20 +44,20 @@
     }
 
     .menu-item:hover {
-      background: rgba(255,255,255,0.2);
+      background: rgba(255,255,255,0.18);
     }
 
     .menu-item h2 {
       margin: 0;
-      font-size: 1.5rem;
-      color: #ffeb3b; /* bright yellow */
+      font-size: 1.6rem;
+      color: #FFD700; /* golden yellow */
     }
 
     .details {
       display: none;
       margin-top: 10px;
       font-size: 1rem;
-      color: #f1f1f1;
+      color: #f5f5f5;
     }
 
     .details img {
@@ -71,7 +71,7 @@
       display: inline-block;
       margin: 20px 0;
       padding: 10px 18px;
-      background: #ff4444;
+      background: #FF4500;
       color: #fff;
       text-decoration: none;
       border-radius: 8px;
@@ -80,7 +80,7 @@
     }
 
     .back-link:hover {
-      background: #cc0000;
+      background: #cc3700;
     }
   </style>
 </head>
