--- a/veg.html
+++ b/veg.html
@@ -16,7 +16,7 @@
     }
 
     .overlay {
-      background: rgba(0, 0, 0, 0.6); /* dark overlay for readability */
+      background: rgba(0, 0, 0, 0.65); /* dark overlay for readability */
       min-height: 100vh;
       padding: 20px;
     }
@@ -25,8 +25,8 @@
       text-align: center;
       font-size: 2.8rem;
       margin: 20px 0;
-      color: #9CFF2E; /* neon green */
-      text-shadow: 2px 2px 8px rgba(0,0,0,0.9);
+      color: #FFD700; /* golden yellow */
+      text-shadow: 2px 2px 10px rgba(0,0,0,0.9);
     }
 
     .menu-container {
@@ -35,7 +35,7 @@
     }
 
     .menu-item {
-      background: rgba(255,255,255,0.08);
+      background: rgba(255, 255, 255, 0.08);
       border-radius: 12px;
       padding: 15px 20px;
       margin: 15px 0;
@@ -44,13 +44,13 @@
     }
 
     .menu-item:hover {
-      background: rgba(255,255,255,0.18);
+      background: rgba(255, 165, 0, 0.2); /* warm orange */
     }
 
     .menu-item h2 {
       margin: 0;
       font-size: 1.6rem;
-      color: #FFD700; /* golden yellow */
+      color: #FF6347; /* tomato red */
     }
 
     .details {
@@ -65,6 +65,10 @@
       max-width: 320px;
       border-radius: 8px;
       margin: 10px 0;
+    }
+
+    .details p strong {
+      color: #98FB98; /* fresh green */
     }
 
     .back-link {
